# pyvista_utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: testing.yml
pyvista_utils/: __init__.py  clean_to_grid.py  compare_grids.py  merge_polylines.py  polyline_cross_section.py  scalar_bar_to_tikz.py  sort_grid.py  temporal_interpolator.py  utils.py
src/pvtools/: __init__.py  polyline_cross_section.py  scalar_bar_to_tikz.py  sort_grid.py
src/pyvista_utils/: __init__.py  polyline_cross_section.py  scalar_bar_to_tikz.py  sort_grid.py  temporal_interpolator.py
src/vistools/: __init__.py
src/vtk_utils/: __init__.py  compare_grids.py  merge_polylines.py  polyline_cross_section.py  vtk_data_structures_utils.py
src/vtktools/: __init__.py  geometric_search.py  merge_polylines.py  polyline_cross_section.py
test/: test_polyline_cross_section.py  test_pyvista_utils.py
test/test_files/: helix_beam.vtu  helix_cross_section.vtu  merge_polylines_reference.vtu  polyline_cross_section_closed.vtu  polyline_cross_section_open.vtu  sort_parallel.vtu  sort_serial.vtu
tests/: __init__.py  conftest.py  test_pyvista_camera.py  test_pyvista_polyline_cross_section.py  test_pyvista_scalar_bar_to_tikz.py  test_pyvista_sort_grid.py  test_pyvista_temporal_interpolator.py  test_vtk_merge_polylines.py  test_vtk_merge_polylines_create_reference_files.py  test_vtk_polyline_cross_section.py
tests/test_files/: helix_beam.vtu  mixed_cell_types.vtu  mixed_cell_types_sorted.vtu  pyvista_polyline_cross_section_closed_connected.vtu  pyvista_polyline_cross_section_closed_separate.vtu  pyvista_polyline_cross_section_open_connected.vtu  pyvista_polyline_cross_section_open_separate.vtu  pyvista_scalar_bar_to_tikz.tex  pyvista_temporal_interpolator.pvd  pyvista_temporal_interpolator_03.vtu  sort_parallel.vtu  sort_serial.vtu  temporal_interpolator.pvd  temporal_interpolator_00.vtu  temporal_interpolator_01.vtu  temporal_interpolator_02.vtu  temporal_interpolator_interpolated.vtu  test_pyvista_temporal_interpolator.tex  vtk_merge_polylines.vtu  vtk_merge_polylines_clean.vtu  vtk_merge_polylines_closed_default.vtu  vtk_merge_polylines_closed_default_clean.vtu  (+5 more)
vtk_utils/: __init__.py  compare_grids.py  merge_polylines.py  polyline_cross_section.py  vtk_data_structures_utils.py
(+10 files in other folders)
