[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vistools"
authors = [
    {name = "Ivo Steinbrecher", email = "ivo.steinbrecher@unibw.de"},
]
description = "Utility functionality for vtk and pyvista"
dependencies = [
    "numpy",
    "scipy",
    "vtk"
]
readme = "README.md"
version = "0.2.0"

[project.urls]
Repository = "https://github.com/isteinbrecher/vistools/"
Issues = "https://github.com/isteinbrecher/vistools/issues/"

[project.optional-dependencies]
pyvista = [
  "pyvista",
  "opencv-python"
]
dev = [
  "pre-commit",
  "pytest",
  "pytest-cov"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov=src/"
